# vsys-project

./: CMakeLists.txt  settings.ini
include/: IProcess.hpp  ServerProcess.hpp  vsys.hpp
ma4client/: CMakeLists.txt
ma4client/include/: ClientProcess.hpp
ma4client/src/: ClientProcess.cpp  vsys.cpp
ma4lib/: CMakeLists.txt
ma4lib/include/ma4lib/: CpuCalculator.hpp  ICalculator.hpp  IProcess.hpp  RemoteCalculator.hpp  TimeMeasure.hpp  vsys.hpp
ma4lib/src/: CpuCalculator.cpp  RemoteCalculator.cpp  vsys.cpp
ma4server/: CMakeLists.txt
ma4server/include/: ClientProcess.hpp  CpuCalculator.hpp  ServerProcess.hpp  TcpConnection.hpp  TcpServer.hpp  UdpServer.hpp
ma4server/src/: ClientProcess.cpp  CpuCalculator.cpp  ServerProcess.cpp  TcpConnection.cpp  TcpServer.cpp  vsys.cpp
src/: vsys.cpp
